# avitoTestAssign

./: .coverage  README.md  docker-compose.yml  exceptions.py  index.html  main.py  middlewares.py  pyproject.toml  requirement.txt  requirements.txt  service.py  test.db
.github/workflows/: ci.yml
config/: settings.py
db/: __init__.py  crud.py  database.py  models.py
depends/: __init__.py  db_dp.py
tests/: conftest.py  endpoints_test.py  services_test.py
utils/: __init__.py  default.py
